--- a/Blogg/Translations/AppResources.pl-PL.resx
+++ b/Blogg/Translations/AppResources.pl-PL.resx
@@ -149,6 +149,10 @@
     <value>Błąd</value>
     <comment>Error</comment>
   </data>
+  <data name="ErrorOccured" xml:space="preserve">
+    <value>Wystąpił błąd: </value>
+    <comment>Error occured:</comment>
+  </data>
   <data name="LatestPosts" xml:space="preserve">
     <value>ostatnie posty</value>
     <comment>latest posts</comment>
@@ -168,6 +172,10 @@
   <data name="Publishing" xml:space="preserve">
     <value>Publikowanie...</value>
     <comment>Publishing...</comment>
+  </data>
+  <data name="Report" xml:space="preserve">
+    <value>. Sprawdź swoje połączenie internetowe lub skontaktuj się z autorem.</value>
+    <comment>Check your internet connection or contact Blogg's author.</comment>
   </data>
   <data name="SignIn" xml:space="preserve">
     <value>zaloguj się</value>
