README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-blogg-wp7 - blogger client for Windows Phone 7
-
-completed, waiting for contest xD
+blogg-wp7 - blogger client for Windows Phone 7 (legacy)
